[package]
name = "fehui"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

[dependencies]
fehui-derive = { path = "derive" }
derivative = "1"
indextree = "3"

[dev-dependencies]
fehui-hotload = { path = "hotload" }

[[example]]
name = "hotload-app"
path = "examples/hotload-app.rs"
crate-type = ["dylib"]
